[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "image-extractor"
version = "0.1.0"
description = "Extract depth-labelled borehole images from PDF well log prints."
readme = "README.md"
license = { text = "Apache 2" }
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23",
    "Pillow>=10.0",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/your-org/logprint-digitiser"

[tool.setuptools.packages.find]
where = ["."]
include = ["image-extractor*"]
