[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logprint_extractor"
version = "0.1.1"
description = "Extract depth-labelled borehole images from PDF well log prints."
readme = "README.md"
license = "Apache-2.0" 
requires-python = ">=3.11"
authors = [
    { name = "Irene Wallis", email = "irene@cubicearth.nz" }
]
keywords = ["borehole", "borehole image", "well log", "PDF", "image extraction", "WellCAD"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pymupdf>=1.23",
    "Pillow>=10.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://cubicearth.nz"
Repository = "https://github.com/ICWallis/logprint_extractor"

[tool.setuptools.packages.find]
where = ["."]
include = ["logprint_extractor*"]
